modify files & add webpack & config for build project :)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-  <script src="For.js"></script>
-  <script src="While.js"></script>
-  <script src="DoWhile.js"></script>
+  <script src="./dist/generators.js" type="module"></script>
 </body>
 
 </html>
